Login Authentication Added

--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -20,5 +20,6 @@
         <input type="password" name="confirm-password" id="confirm-password" required minlength="4"><br>
         <button type="submit">Sign Up</button>
     </form>
+    <a href="/log-in">Log in</a>
 </body>
 </html>
