--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -6,11 +6,11 @@
     <title>Log-in</title>
 </head>
 <body>
-    <form action="/log-in" method="GET">
+    <form action="/log-in" method="POST">
         <label for="username">Username:</label>
-        <input type="text" name="username" id="username"><br>
+        <input type="text" name="username" id="username" required><br>
         <label for="password">Password:</label>
-        <input type="password" name="password" id="password"><br>
+        <input type="password" name="password" id="password" required><br>
         <button type="submit">Log in</button>
     </form>
 </body>
