Membership Route Created

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="/members-only">Home</a></li>
             <li><a href="/write-message">Write a Message</a></li>
-            <li><a href="/membership">Become a Member</a></li>
+            <li><a href="/become-member">Become a Member</a></li>
             <li><a href="/settings">Settings</a></li>
         </ul>
     </nav>
