Made the Messages to be from Anonymous if Membership is False

--- a/views/becomeMember.ejs
+++ b/views/becomeMember.ejs
@@ -7,5 +7,16 @@
 </head>
 <body>
     <h1>Become a Member</h1>
+    <div>
+        <p>Answer this Question to become a Member</p>
+        <p>Who is the Greatest Midfielder of All Time?</p>
+        <p></p>
+        <form action="/membership" method="POST">
+            <label for="answer">Answer:</label><br>
+            <input type="text" name="answer" id="answer">
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+   
 </body>
 </html>
