--- a/views/becomeMember.ejs
+++ b/views/becomeMember.ejs
@@ -7,16 +7,27 @@
 </head>
 <body>
     <h1>Become a Member</h1>
-    <div>
-        <p>Answer this Question to become a Member</p>
-        <p>Who is the Greatest Midfielder of All Time?</p>
-        <p></p>
-        <form action="/membership" method="POST">
-            <label for="answer">Answer:</label><br>
-            <input type="text" name="answer" id="answer">
-            <button type="submit">Submit</button>
-        </form>
-    </div>
+    <% if (status) { %>
+        <h1>Membership Approved</h1>
+        <p>You are right, He is the Greatest Midfielder of All Time</p>
+        <p>Click on the link to go back to the Home Page</p>
+        <a href="/members-only">Home</a>
+    <% } else { %>
+        <div>
+            <% if (message) { %>
+                <p>Come On, That is not the Greatest Midfielder of All Time</p>
+            <% } %>
+            <p>Answer this Question to become a Member</p>
+            <p>Who is the Greatest Midfielder of All Time?</p>
+            <p></p>
+            <form action="/membership" method="POST">
+                <label for="answer">Answer:</label><br>
+                <input type="text" name="answer" id="answer" required>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    <% } %>
+   
    
 </body>
 </html>
