--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -3,23 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sign-up</title>
+    <link rel="stylesheet" href="/signup.css">
+    <title>Members Only - Sign Up</title>
 </head>
 <body>
-    <%- include("partials/errors.ejs") %>
-    <form action="/sign-up" method="POST">
-        <label for="firstName">FirstName:</label>
-        <input type="text" id="firstname" name="firstName" required><br>
-        <label for="lastName">LastName:</label>
-        <input type="text" id="lastName" name="lastName" required><br>
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username" required maxlength="20"><br>
-        <label for="password">Password:</label>
-        <input type="password" name="password" id="password" required minlength="4"><br>
-        <label for="confirm-password">Confirm Password:</label>
-        <input type="password" name="confirm-password" id="confirm-password" required minlength="4"><br>
-        <button type="submit">Sign Up</button>
-    </form>
-    <a href="/log-in">Log in</a>
+    <main class="container">
+        <!-- Error messages section -->
+        <% if (locals.errors) { %>
+            <div class="error-container">
+                <% errors.forEach(function(error) { %>
+                    <p class="error-message"><%= error %></p>
+                <% }); %>
+            </div>
+        <% } %>
+
+        <!-- Sign up form -->
+        <form action="/sign-up" method="POST">
+            <h1>Create Account</h1>
+            
+            <div class="form-group">
+                <label for="firstName">First Name</label>
+                <input 
+                    type="text" 
+                    id="firstName" 
+                    name="firstName" 
+                    required 
+                    placeholder="Enter your first name"
+                >
+            </div>
+
+            <div class="form-group">
+                <label for="lastName">Last Name</label>
+                <input 
+                    type="text" 
+                    id="lastName" 
+                    name="lastName" 
+                    required 
+                    placeholder="Enter your last name"
+                >
+            </div>
+
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input 
+                    type="text" 
+                    id="username" 
+                    name="username" 
+                    required 
+                    maxlength="20" 
+                    placeholder="Choose a username"
+                >
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input 
+                    type="password" 
+                    id="password" 
+                    name="password" 
+                    required 
+                    minlength="4" 
+                    placeholder="Create a password"
+                >
+            </div>
+
+            <div class="form-group">
+                <label for="confirm-password">Confirm Password</label>
+                <input 
+                    type="password" 
+                    id="confirm-password" 
+                    name="confirm-password" 
+                    required 
+                    minlength="4" 
+                    placeholder="Confirm your password"
+                >
+            </div>
+
+            <button type="submit">Create Account</button>
+        </form>
+
+        <div class="login-link">
+            Already have an account? <a href="/log-in">Log in</a>
+        </div>
+    </main>
 </body>
 </html>
