--- a/views/authError.ejs
+++ b/views/authError.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Authentication Required - MembersHub</title>
+    <title>Authentication Required</title>
     <link rel="stylesheet" href="/auth.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 </head>
