--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
 
     <!-- Hero Section -->
     <section class="hero container">
-        <h1 id="hero-text"><span class="reddit-text">Reddit</span> with a Catch.<br>Every Post is Anonymous, Or is it?</h1>
+        <h1 id="hero-text"><span class="reddit-text">Reddit</span> with a Catch.<br>Every Post is Anonymous, or is it?</h1>
         <p>As a member of our exclusive community, you'll gain privileged access to who post what.</p>
         <button class="button button-filled button-large"><a href="/sign-up" class="get-started">Get Started Today</a></button>
     </section>
