--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -12,7 +12,7 @@
         <% if (locals.errors) { %>
             <div class="error-container">
                 <% errors.forEach(function(error) { %>
-                    <p class="error-message"><%= error %></p>
+                    <p class="error-message"><%= error.msg %></p>
                 <% }); %>
             </div>
         <% } %>
